--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -3,27 +3,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding-right: 1rem;
-  padding-left: 1rem;
+  padding: 1rem;
   background-color: #FFFFFF;
-}
-
-.nav {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  row-gap: 1rem;
-}
-
-.navItem {
-  font-family: "Copperplate", "Montserrat";
-  color: #A20000;
-  margin: 1rem;
-  text-decoration: none;
-  transition: transform 1s;
-}
-
-.navItem:hover {
-  color: #000000;
-  transform: scale(1.1);
 }/*# sourceMappingURL=header.module.css.map */
