--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,3 +7,7 @@ $primary-color: #A20000;
 $secondary-color: #D1A47D;
 $third-color: #FFFFFF;
 $fourth-color: #000000;
+
+//Sizes
+$title-size: 2rem;
+$text-size: 1.5rem;
