--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -37,6 +37,7 @@
 
 .navItem {
   font-family: $title-font;
+  font-size: $text-size;
   color: $fourth-color;
   margin: 1rem;
   text-decoration: none;
