--- a/src/components/historySection/history/history.module.css
+++ b/src/components/historySection/history/history.module.css
@@ -1,21 +1,3 @@
-@import "../../styles/mixins";
-@import "../../styles/variables";
-
-.historyMainContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  row-gap: 2rem;
-  background-color: $secondary-color;
-}
-
-.historyMainContainer h2 {
-  font-family: $title-font;
-  font-size: $title-size;
-  margin: 3rem;
-}
-
 .ourHistoryContainer {
   display: flex;
   flex-direction: row;
@@ -28,6 +10,11 @@
   width: 500px;
   height: auto;
   border-radius: 25px;
+  transition: transform 0.5s;
+}
+
+.ourHistoryContainer img:hover {
+  transform: scale(1.1);
 }
 
 .ourHistoryContainerTexts {
@@ -35,16 +22,16 @@
 }
 
 .ourHistoryContainerTexts h3 {
-  font-family: $title-font;
-  font-size: $title-size;
+  font-family: "Copperplate", "Montserrat";
+  font-size: 2rem;
 }
 
 .ourHistoryContainerTexts p {
-  font-family: $text-font;
-  font-size: $text-size;
+  font-family: "Lato", sans-serif;
+  font-size: 1.5rem;
 }
 
-@include medium() {
+@media (max-width: 991.98px) {
   .ourHistoryContainer {
     flex-direction: column;
   }
@@ -54,4 +41,4 @@
   .ourHistoryContainerTexts {
     width: 90%;
   }
-}
+}/*# sourceMappingURL=history.module.css.map */
