--- a/src/components/main/mainSection.module.scss
+++ b/src/components/main/mainSection.module.scss
@@ -33,15 +33,13 @@
   color: $third-color;
   font-size: 4rem;
   position: sticky;
-  top: 0%;
+  top: 5%;
   transition: all 1s;
-
 }
 
 .arrowMainContainer {
-  position: absolute;
+  position: relative;
   bottom: 0%;
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -65,9 +63,11 @@
   100% {
     opacity: 1;
   }
+
   50% {
     opacity: 0.5;
   }
+
   0% {
     opacity: 0;
   }
