--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -45,6 +45,7 @@
 
 .navItem {
   font-family: "Copperplate", "Montserrat";
+  font-size: 1.5rem;
   color: #000000;
   margin: 1rem;
   text-decoration: none;
