--- a/src/components/others/guardaPampa.css
+++ b/src/components/others/guardaPampa.css
@@ -2,11 +2,11 @@
   margin: 0 auto;
   padding: 0;
   width: 100%;
-  height: 200px;
+  height: 300px;
   background: url('../../assets/svg/guarda-pampa.svg');
   background-position: center;
   background-repeat: repeat-x;
-  background-size: contain;
+  background-size: cover;
   background-clip: border-box;
   background-attachment: scroll;
 }
