--- a/src/components/historySection/ourMessage/message.module.css
+++ b/src/components/historySection/ourMessage/message.module.css
@@ -15,11 +15,12 @@
 .messageMainContainer img {
   width: 200px;
   height: 200px;
-  border: 1px solid #A20000;
+  border: 4px solid #A20000;
   border-radius: 100%;
 }
 
 .quote, .nameQuote {
+  line-height: 40px;
   text-align: center;
   width: 70%;
   font-family: "Lato", sans-serif;
