--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@ $text-font: 'Lato', sans-serif;
 
 //Colors
 $primary-color: #A20000;
-$secondary-color: #D1A47D;
+$secondary-color: #fdcb9f;
 $third-color: #FFFFFF;
 $fourth-color: #000000;
 
