Added products and manifest for PWA

--- a/src/components/historySection/aboutSection.module.css
+++ b/src/components/historySection/aboutSection.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   row-gap: 2rem;
   padding-top: 2rem;
-  background-color: #fdcb9f;
+  background-color: #D1A47D;
 }
 
 .aboutMainContainer h2 {
