--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -46,7 +46,7 @@
 .navItem {
   font-family: "Copperplate", "Montserrat";
   font-size: 1.5rem;
-  color: #000000;
+  color: #1b1b1c;
   margin: 1rem;
   text-decoration: none;
   transition: transform 1s;
