--- a/src/components/historySection/gallery/gallery.module.scss
+++ b/src/components/historySection/gallery/gallery.module.scss
@@ -3,7 +3,7 @@
 
 .mySwiper {
   width: 70%;
-  height: auto;
+  height: 100%;
   border-radius: 20px;
 }
 
@@ -15,7 +15,8 @@
 .galleryMainContainer {
   width: 100%;
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
+  margin-top: -3rem;
 }
 
 .galleryMainContainer h3 {
