--- a/src/components/products/products.module.scss
+++ b/src/components/products/products.module.scss
@@ -8,14 +8,31 @@
   justify-content: center;
   text-align: center;
   margin-top: 3rem;
+  row-gap: 1rem;
 }
 
 .productsSectionContainer h2 {
   color: white;
   font-family: $title-font;
   font-size: $title-font;
-      background-color: #af7439;
-        padding: 20px;
-        border-radius: 20px;
-        box-shadow: 2px 2px 10px #8B5E3C;
+  background-color: $primary-color;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 2px 2px 10px #8B5E3C;
+}
+
+.productsContainer {
+  column-gap: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  row-gap: 1rem;
+}
+
+@include medium() {
+  .productsContainer {
+    flex-direction: column;
+  }
 }
