--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,9 +4,9 @@ $text-font: 'Lato', sans-serif;
 
 //Colors
 $primary-color: #A20000;
-$secondary-color: #fdcb9f;
+$secondary-color: #D1A47D;
 $third-color: #FFFFFF;
-$fourth-color: #000000;
+$fourth-color: #1b1b1c;
 
 //Sizes
 $title-size: 2rem;
