--- a/src/components/historySection/aboutSection.module.css
+++ b/src/components/historySection/aboutSection.module.css
@@ -5,7 +5,8 @@
   justify-content: center;
   row-gap: 2rem;
   padding-top: 2rem;
-  background-color: #D1A47D;
+  background: rgb(234, 182, 136);
+  background: linear-gradient(180deg, rgb(234, 182, 136) 55%, hsl(0deg, 0%, 100%) 100%);
 }
 
 .aboutMainContainer h2 {
