--- a/src/components/locationSection/map/map.module.css
+++ b/src/components/locationSection/map/map.module.css
@@ -11,4 +11,8 @@
   justify-content: center;
   align-items: center;
   font-family: "Copperplate", "Montserrat";
+}
+
+.mapDiv {
+  border-radius: 20px;
 }/*# sourceMappingURL=map.module.css.map */
