--- a/src/components/locationSection/location.module.css
+++ b/src/components/locationSection/location.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   padding: 1rem;
 }
 
@@ -12,6 +13,7 @@
 }
 
 .locationSectionContainer p {
+  width: 80%;
   font-family: "Lato", sans-serif;
   font-size: 1.5rem;
 }/*# sourceMappingURL=location.module.css.map */
