--- a/src/components/locationSection/location.module.scss
+++ b/src/components/locationSection/location.module.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   padding: 1rem;
 }
 
@@ -15,6 +16,7 @@
 }
 
 .locationSectionContainer p {
+  width: 80%;
   font-family: $text-font;
   font-size: $text-size;
 }
