--- a/src/components/locationSection/map/map.module.css
+++ b/src/components/locationSection/map/map.module.css
@@ -1,18 +1,16 @@
-.marker {
-  width: 55px;
-  padding: 1rem;
-  display: flex;
-  text-align: center;
-  border: 1px solid #A20000;
-  background-color: #FFFFFF;
-  flex-direction: column;
-  align-content: center;
-  border-radius: 25px;
-  justify-content: center;
-  align-items: center;
-  font-family: "Copperplate", "Montserrat";
+.map {
+  width: 60%;
+  height: 50vh;
+  margin: 1rem;
+  border: 2px solid #A20000;
+  border-radius: 20px;
+  box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
 }
 
-.mapDiv {
-  border-radius: 20px;
+@media (max-width: 991.98px) {
+  .map {
+    width: 90%;
+  }
 }/*# sourceMappingURL=map.module.css.map */
