--- a/src/components/locationSection/map/map.module.scss
+++ b/src/components/locationSection/map/map.module.scss
@@ -1,22 +1,19 @@
 @import '../../../styles/mixins';
 @import '../../../styles/variables';
 
-.marker {
-  width: 55px;
-  padding: 1rem;
-  display: flex;
-  text-align: center;
-  border: 1px solid $primary-color;
-  background-color: $third-color;
-  flex-direction: column;
-  align-content: center;
-  border-radius: 25px;
-  justify-content: center;
-  align-items: center;
-  font-family: $title-font;
-}
-
-.mapDiv {
+.map {
+  width: 60%;
+  height: 50vh;
+  margin: 1rem;
+  border: 2px solid $primary-color;
   border-radius: 20px;
+  box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
 }
 
+@include medium() {
+  .map {
+    width: 90%;
+  }
+}
