--- a/src/components/product/product.module.css
+++ b/src/components/product/product.module.css
@@ -61,4 +61,9 @@
   .productMainContainer {
     width: 80%;
   }
+}
+@media (max-width: 1199.98px) {
+  .productMainContainer {
+    width: 300px;
+  }
 }/*# sourceMappingURL=product.module.css.map */
