--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 /* Personalized Font */
+/* FIXME: Fix issue with font loading */
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&display=swap');
 
 @font-face {
