Change styles and fixed responsive

--- a/src/components/contactAndHoursSection/contact/contact.module.css
+++ b/src/components/contactAndHoursSection/contact/contact.module.css
@@ -1,4 +1,5 @@
 .contactMainContainer {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,9 +8,17 @@
 }
 
 .contactMainContainer h2 {
+  color: white;
   font-family: "Copperplate", "Montserrat";
   font-size: 2rem;
-  color: #FFFFFF;
+  padding: 1rem;
+  border-radius: 20px;
+  box-shadow: 2px 2px 10px #8B5E3C;
+  background-color: #D1A47D;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: background 3s;
 }
 
 .contactMethods {
@@ -18,11 +27,16 @@
   align-items: center;
   justify-content: center;
   row-gap: 2rem;
-  width: 50vw;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
   background-color: #FFFFFF;
-  border: 1px solid white;
   border-radius: 25px;
-  padding: 2rem;
+  padding: 1rem;
+  color: black;
+  box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
 }
 
 .contactItem {
@@ -53,9 +67,20 @@
     width: -webkit-max-content;
     width: -moz-max-content;
     width: max-content;
-    max-width: 95%;
+    word-wrap: break-word;
   }
   .contactItem {
     flex-direction: column;
+  }
+}
+@media (max-width: 767.98px) {
+  .contactMethods {
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+    max-width: 300px;
+  }
+  .contactItem a {
+    font-size: 1.2rem;
   }
 }/*# sourceMappingURL=contact.module.css.map */
