--- a/src/components/contactAndHoursSection/contact/contact.module.scss
+++ b/src/components/contactAndHoursSection/contact/contact.module.scss
@@ -2,6 +2,7 @@
 @import '../../../styles/variables';
 
 .contactMainContainer {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,9 +11,17 @@
 }
 
 .contactMainContainer h2 {
-  font-family: $title-font;
-  font-size: $title-size;
-  color: $third-color;
+    color: white;
+      font-family: $title-font;
+      font-size: $title-size;
+      padding: 1rem;
+      border-radius: 20px;
+      box-shadow: 2px 2px 10px #8B5E3C;
+      background-color: $secondary-color;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      transition: background 3s;
 }
 
 .contactMethods {
@@ -21,11 +30,15 @@
   align-items: center;
   justify-content: center;
   row-gap: 2rem;
-  width: 50vw;
+  width: max-content;
   background-color: $third-color;
-  border: 1px solid white;
-  border-radius: 25px;
-  padding: 2rem;
+
+    border-radius: 25px;
+    padding: 1rem;
+    color: black;
+    box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
 }
 
 .contactItem {
@@ -53,9 +66,21 @@
 @include medium() {
   .contactMethods {
     width: max-content;
-    max-width: 95%;
+    word-wrap: break-word;
   }
+
   .contactItem {
     flex-direction: column;
+  }
+}
+
+@include small() {
+  .contactMethods {
+    width: max-content;
+    max-width: 300px;
+  }
+
+  .contactItem a {
+    font-size: 1.2rem;
   }
 }
