--- a/src/components/contactAndHoursSection/contactSection.module.css
+++ b/src/components/contactAndHoursSection/contactSection.module.css
@@ -1,7 +1,8 @@
 .contactSectionContainer {
+  width: 100%;
   padding: 1rem;
-  row-gap: 1rem;
-  background-color: #1b1b1c;
+  padding-bottom: 3rem;
+  row-gap: 3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
