--- a/src/components/contactAndHoursSection/contactSection.module.scss
+++ b/src/components/contactAndHoursSection/contactSection.module.scss
@@ -1,9 +1,12 @@
 @import '../../styles/variables';
 
 .contactSectionContainer {
+  width: 100%;
   padding: 1rem;
-  row-gap: 1rem;
-  background-color: $fourth-color;
+  padding-bottom: 3rem;
+  row-gap: 3rem;
+  // background-color: $fourth-color;
+  // background-color: $third-color;
   display: flex;
   flex-direction: column;
   align-items: center;
