--- a/src/components/contactAndHoursSection/hours/hours.module.css
+++ b/src/components/contactAndHoursSection/hours/hours.module.css
@@ -1,4 +1,5 @@
 .hoursMainContainer {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,9 +7,17 @@
 }
 
 .hoursMainContainer h2 {
+  color: white;
   font-family: "Copperplate", "Montserrat";
   font-size: 2rem;
-  color: #FFFFFF;
+  padding: 1rem;
+  border-radius: 20px;
+  box-shadow: 2px 2px 10px #8B5E3C;
+  background-color: #D1A47D;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: background 3s;
 }
 
 .hoursCard {
@@ -16,11 +25,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 50vw;
+  width: 25%;
   background-color: #FFFFFF;
-  border: 1px solid white;
   border-radius: 25px;
-  padding: 2rem;
+  padding: 1rem;
+  color: black;
+  box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
 }
 
 .hoursUnit h3 {
@@ -35,9 +47,11 @@
 
 @media (max-width: 991.98px) {
   .hoursCard {
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
-    max-width: 95%;
+    width: 50%;
+  }
+}
+@media (max-width: 767.98px) {
+  .hoursCard {
+    width: 80%;
   }
 }/*# sourceMappingURL=hours.module.css.map */
