--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
   justify-content: space-between;
   background-color: #FFFFFF;
 }
@@ -26,4 +28,10 @@
 .address p {
   font-family: "Lato", sans-serif;
   font-size: 1.5rem;
+}
+
+@media (max-width: 991.98px) {
+  .footerMain {
+    justify-content: center;
+  }
 }/*# sourceMappingURL=footer.module.css.map */
