--- a/src/components/historySection/aboutSection.module.css
+++ b/src/components/historySection/aboutSection.module.css
@@ -3,9 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  row-gap: 2rem;
-  padding-top: 2rem;
-  background-color: #D1A47D;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .aboutMainContainer h2 {
@@ -13,8 +12,12 @@
   font-family: "Copperplate", "Montserrat";
   font-size: 2rem;
   margin: 3rem;
-  background-color: #af7439;
-  padding: 20px;
+  padding: 1rem;
   border-radius: 20px;
   box-shadow: 2px 2px 10px #8B5E3C;
+  background-color: #D1A47D;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: background 3s;
 }/*# sourceMappingURL=aboutSection.module.css.map */
