--- a/src/components/historySection/gallery/gallery.module.css
+++ b/src/components/historySection/gallery/gallery.module.css
@@ -1,24 +1,33 @@
 .mySwiper {
-  width: 70%;
-  height: 100%;
+  width: 80%;
+  height: auto;
   border-radius: 20px;
 }
 
 .mySwiper img {
   width: 100%;
-  height: 500px;
+  height: auto;
+  max-height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
 }
 
 .galleryMainContainer {
   width: 100%;
   text-align: center;
-  margin-bottom: 1rem;
-  margin-top: -3rem;
 }
 
 .galleryMainContainer h3 {
   font-family: "Copperplate", "Montserrat";
   font-size: 2rem;
+}
+
+.galleryMainContainer h3::after, .galleryMainContainer h3::before {
+  margin: 1rem;
+  content: "|";
+  color: #A20000;
 }
 
 @media (max-width: 991.98px) {
