--- a/src/components/locationSection/location.module.scss
+++ b/src/components/locationSection/location.module.scss
@@ -8,11 +8,22 @@
   justify-content: center;
   text-align: center;
   padding: 1rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .locationSectionContainer h2 {
-  font-family: $title-font;
-  font-size: $title-size;
+    color: white;
+      font-family: $title-font;
+      font-size: $title-size;
+      padding: 1rem;
+      border-radius: 20px;
+      box-shadow: 2px 2px 10px #8B5E3C;
+      background-color: $secondary-color;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      transition: background 3s;
 }
 
 .locationSectionContainer p {
