--- a/src/components/product/product.module.css
+++ b/src/components/product/product.module.css
@@ -1,8 +1,7 @@
 .productMainContainer {
-  width: 25%;
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
+  width: 30%;
+  max-width: 450px;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,6 +25,10 @@
   border-radius: 20px;
   position: relative;
   top: 0%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
 }
 
 .productMainContainer h3 {
@@ -60,10 +63,5 @@
 @media (max-width: 991.98px) {
   .productMainContainer {
     width: 80%;
-  }
-}
-@media (max-width: 1199.98px) {
-  .productMainContainer {
-    width: 300px;
   }
 }/*# sourceMappingURL=product.module.css.map */
