--- a/src/components/products/products.module.css
+++ b/src/components/products/products.module.css
@@ -1,35 +1,49 @@
 .productsSectionContainer {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-top: 3rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   row-gap: 1rem;
 }
 
 .productsSectionContainer h2 {
+  margin-top: -4rem;
   color: white;
   font-family: "Copperplate", "Montserrat";
-  font-size: "Copperplate", "Montserrat";
-  background-color: #A20000;
-  padding: 20px;
+  font-size: 2rem;
+  padding: 1rem;
   border-radius: 20px;
   box-shadow: 2px 2px 10px #8B5E3C;
+  background-color: #D1A47D;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: background 3s;
 }
 
 .productsContainer {
+  width: 90%;
   -moz-column-gap: 1rem;
        column-gap: 1rem;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   flex-wrap: wrap;
   row-gap: 1rem;
 }
 
 @media (max-width: 991.98px) {
+  .productsContainer {
+    width: 100%;
+    justify-content: space-around;
+  }
+}
+@media (max-width: 767.98px) {
   .productsContainer {
     flex-direction: column;
   }
