--- a/src/components/products/products.module.scss
+++ b/src/components/products/products.module.scss
@@ -2,36 +2,51 @@
 @import '../../styles/variables';
 
 .productsSectionContainer {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-top: 3rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   row-gap: 1rem;
 }
 
 .productsSectionContainer h2 {
-  color: white;
-  font-family: $title-font;
-  font-size: $title-font;
-  background-color: $primary-color;
-  padding: 20px;
-  border-radius: 20px;
-  box-shadow: 2px 2px 10px #8B5E3C;
+  margin-top: -4rem;
+    color: white;
+      font-family: $title-font;
+      font-size: $title-size;
+      padding: 1rem;
+      border-radius: 20px;
+      box-shadow: 2px 2px 10px #8B5E3C;
+      background-color: $secondary-color;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      transition: background 3s;
 }
 
 .productsContainer {
+  width: 90%;
   column-gap: 1rem;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   flex-wrap: wrap;
   row-gap: 1rem;
 }
 
 @include medium() {
+  .productsContainer {
+    width: 100%;
+    justify-content: space-around;
+  }
+}
+
+@include small() {
   .productsContainer {
     flex-direction: column;
   }
