--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,9 @@ Remove the margin in all browsers.
 
 body {
 	margin: 0;
+background-color: #d1a47d;
+background-image: linear-gradient(0deg, #d1a47d 0%, #ffffff 90%);
+
 }
 
 /**
