--- a/src/components/contactAndHoursSection/contact/contact.module.css
+++ b/src/components/contactAndHoursSection/contact/contact.module.css
@@ -8,17 +8,15 @@
 }
 
 .contactMainContainer h2 {
-  color: white;
   font-family: "Copperplate", "Montserrat";
   font-size: 2rem;
+  margin-bottom: 2rem;
+  border-radius: 15px 15px 30px 30px;
   padding: 1rem;
-  border-radius: 20px;
-  box-shadow: 2px 2px 10px #8B5E3C;
-  background-color: #D1A47D;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  transition: background 3s;
+  color: white;
+  background-color: #1b1b1c;
+  border-left: 10px solid #D1A47D;
+  border-right: 10px solid #D1A47D;
 }
 
 .contactMethods {
@@ -27,26 +25,33 @@
   align-items: center;
   justify-content: center;
   row-gap: 2rem;
+  padding: 2rem;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
+  height: 400px;
   background-color: #FFFFFF;
-  border-radius: 25px;
+  border-top: 10px solid #1b1b1c;
+  border-radius: 0px 0px 20px 20px;
   padding: 1rem;
   color: black;
   box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
+  transition: border-radius 1s;
+}
+
+.contactMethods:hover {
+  border-radius: 0px 0px 10px 10px;
 }
 
 .contactItem {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
+  row-gap: 1rem;
 }
 
 .contactItem a {
