--- a/src/components/contactAndHoursSection/contactSection.module.css
+++ b/src/components/contactAndHoursSection/contactSection.module.css
@@ -4,8 +4,15 @@
   padding-bottom: 3rem;
   row-gap: 3rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  align-items: flex-start;
   justify-content: center;
   text-align: center;
+}
+
+@media (max-width: 991.98px) {
+  .contactSectionContainer {
+    flex-direction: column;
+    align-items: center;
+  }
 }/*# sourceMappingURL=contactSection.module.css.map */
