--- a/src/components/contactAndHoursSection/contactSection.module.scss
+++ b/src/components/contactAndHoursSection/contactSection.module.scss
@@ -1,15 +1,21 @@
 @import '../../styles/variables';
+@import '../../styles/mixins';
 
 .contactSectionContainer {
   width: 100%;
   padding: 1rem;
   padding-bottom: 3rem;
   row-gap: 3rem;
-  // background-color: $fourth-color;
-  // background-color: $third-color;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  align-items: flex-start;
   justify-content: center;
   text-align: center;
+}
+
+@include medium() {
+  .contactSectionContainer {
+    flex-direction: column;
+    align-items: center;
+  }
 }
