--- a/src/components/historySection/aboutSection.module.css
+++ b/src/components/historySection/aboutSection.module.css
@@ -5,6 +5,7 @@
   justify-content: center;
   padding-top: 3rem;
   padding-bottom: 3rem;
+  background-color: #FFFFFF;
 }
 
 .aboutMainContainer h2 {
@@ -12,12 +13,11 @@
   font-family: "Copperplate", "Montserrat";
   font-size: 2rem;
   margin: 3rem;
+  margin-bottom: 2rem;
+  border-radius: 15px 15px 30px 30px;
   padding: 1rem;
-  border-radius: 20px;
-  box-shadow: 2px 2px 10px #8B5E3C;
-  background-color: #D1A47D;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  transition: background 3s;
+  color: white;
+  background-color: #1b1b1c;
+  border-left: 10px solid #D1A47D;
+  border-right: 10px solid #D1A47D;
 }/*# sourceMappingURL=aboutSection.module.css.map */
