--- a/src/components/historySection/aboutSection.module.scss
+++ b/src/components/historySection/aboutSection.module.scss
@@ -8,7 +8,7 @@
   justify-content: center;
   padding-top: 3rem;
   padding-bottom: 3rem;
-  // background-color: $secondary-color;
+  background-color: $third-color;
 }
 
 .aboutMainContainer h2 {
@@ -16,12 +16,5 @@
   font-family: $title-font;
   font-size: $title-size;
   margin: 3rem;
-  padding: 1rem;
-  border-radius: 20px;
-  box-shadow: 2px 2px 10px #8B5E3C;
-  background-color: $secondary-color;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    transition: background 3s;
+  @include section-title;
 }
