--- a/src/components/historySection/history/history.module.scss
+++ b/src/components/historySection/history/history.module.scss
@@ -13,7 +13,7 @@
 .ourHistoryContainer img {
   width: 40%;
   object-fit: cover;
-  border-radius: 20px;
+  @include border-radius-img;
   transition: transform 0.5s;
   border: 3px solid $secondary-color;
   box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
@@ -23,6 +23,7 @@
 
 .ourHistoryContainer img:hover {
   transform: scale(1.1);
+  @include border-radius-img-effect;
 }
 
 .ourHistoryContainerTexts {
@@ -32,12 +33,7 @@
 .ourHistoryContainerTexts h3 {
   font-family: $title-font;
   font-size: $title-size;
-}
-
-.ourHistoryContainer h3::before {
-  margin: 1rem;
-  content: "|";
-  color: $primary-color;
+  @include sub-section-title;
 }
 
 .ourHistoryContainerTexts p {
