--- a/src/components/locationSection/location.module.scss
+++ b/src/components/locationSection/location.module.scss
@@ -13,17 +13,9 @@
 }
 
 .locationSectionContainer h2 {
-    color: white;
       font-family: $title-font;
       font-size: $title-size;
-      padding: 1rem;
-      border-radius: 20px;
-      box-shadow: 2px 2px 10px #8B5E3C;
-      background-color: $secondary-color;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      transition: background 3s;
+      @include section-title;
 }
 
 .locationSectionContainer p {
