--- a/src/components/product/product.module.scss
+++ b/src/components/product/product.module.scss
@@ -13,19 +13,19 @@
   color: $third-color;
   background-color: $primary-color;
   border: 1px solid white;
-  border-radius: 20px;
+  @include border-radius-div;
   transition: all 1s;
+  margin: 1rem;
 }
 
 .productMainContainer:hover {
   transform: scale(1.1);
   box-shadow: 2px 1.5px 2px 1.5px gray;
-  margin: 1rem;
+  border-radius: 0px 0px 10px 10px;
 }
 
 .productMainContainer img {
   width: 100%;
-  border-radius: 20px;
   position: relative;
   top: 0%;
   object-fit: cover;
