--- a/src/components/historySection/gallery/gallery.module.css
+++ b/src/components/historySection/gallery/gallery.module.css
@@ -31,6 +31,7 @@
   text-align: center;
   font-family: "Copperplate", "Montserrat";
   font-size: 2rem;
+  max-width: 90%;
   color: white;
   background-color: #1b1b1c;
   border-left: 10px solid #A20000;
