--- a/src/components/historySection/ourMessage/message.module.css
+++ b/src/components/historySection/ourMessage/message.module.css
@@ -11,6 +11,7 @@
 .messageMainContainer h3 {
   font-family: "Copperplate", "Montserrat";
   font-size: 2rem;
+  max-width: 90%;
   color: white;
   background-color: #1b1b1c;
   border-left: 10px solid #A20000;
