--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @font-face {
   font-family: 'Copperplate';
   src: local('Copperplate'), url(../src/assets/fonts/Copperplate\ Gothic\ Bold\ Regular.ttf) format('truetype');
+	font-display: swap;
 }
 
 /*
