--- a/src/components/contactAndHoursSection/hours/hours.module.css
+++ b/src/components/contactAndHoursSection/hours/hours.module.css
@@ -35,6 +35,7 @@
   -moz-box-shadow: 1px 8px 21px 0px rgba(0, 0, 0, 0.75);
   border-top: 10px solid #1b1b1c;
   border-radius: 0px 0px 20px 20px;
+  transition: all 1s;
 }
 
 .hoursCard:hover {
