Added animation on about section and I fixed width in product and hours

--- a/src/components/historySection/aboutSection.module.css
+++ b/src/components/historySection/aboutSection.module.css
@@ -8,6 +8,35 @@
   background-color: #FFFFFF;
 }
 
+.animation {
+  transition: opacity 1s;
+  -webkit-animation: appear 1s 1 alternate;
+          animation: appear 1s 1 alternate;
+}
+
+@-webkit-keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .aboutMainContainer h2 {
   color: white;
   font-family: "Copperplate", "Montserrat";
