--- a/src/components/products/products.module.css
+++ b/src/components/products/products.module.css
@@ -31,7 +31,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   row-gap: 1rem;
 }
 
