--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 // Texts
-$title-font: 'copperplate-gothic-bold-regular', 'Montserrat';
+$title-font: 'Copperplate', 'Montserrat';
 $text-font: 'Lato', sans-serif;
 
 //Colors
