--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
 /* Personalized Font and Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&display=swap');
 
+@font-face {
+  font-family: 'Copperplate';
+  src: url('fonts/copperplategothicbold.woff2') format('woff2'),
+    url('fonts/copperplategothicbold.woff') format('woff');
+  font-style: normal;
+  font-weight: normal;
+}
 /*
 Document
 ========
